Added sum unit tests and auth0 interaction for token exchange